1375329600,7084,
1378008000,7530,
1380600000,8120,
1383278400,8655,
1385874000,9213,
1388552400,9832,
1391230800,10528,1
1393650000,11189,2
1396324800,11960,3
1398916800,12739,4
1401595200,13537,5
1404187200,14375,6
1406865600,15170,7
1409544000,16092,8
1412136000,16916,9
1414814400,10267,0
1417410000,10765,0
1420088400,11297,0
1422766800,11888,0
1425186000,12452,0
1427860800,12985,1
1430452800,13598,2
1433131200,14212,3
1435723200,14839,4
1438401600,15607,5
1441080000,16287,6
1443672000,17006,7
1446350400,17766,8
1448946000,18522,9
1451624400,19430,10
1454302800,20219,11
1456808400,21030,12
1459483200,21943,13
1462075200,23034,14
1464753600,23968,15
1467345600,24746,16
1470024000,25551,17
1472702400,26486,18
1475294400,27325,19
1477972800,28220,20
1480568400,29070,21
1483246800,29959,22
1485925200,30846,23
1488344400,31901,24
1491019200,32982,25
1493611200,33973,26
1496289600,34982,27
1498881600,36166,28
1501560000,37275,29
1504238400,38336,30
1506830400,39331,31
1509508800,40527,32
1512104400,41621,33
1514782800,42760,34
1517461200,44063,35
1519880400,45195,36
1522555200,46418,37
1525147200,47732,38
1527825600,48927,39
1530417600,50194,40
1533096000,51310,41
1535774400,59203,0
1538366400,60538,0
1541044800,61922,0
1543640400,63523,0
1546318800,64849,0
1548997200,66389,1
1551416400,67872,2
1554091200,69590,3
1556683200,71224,4
1559361600,72917,5
1561953600,74301,6
1564632000,75852,7
1567310400,77286,8
1569902400,78839,9
1572580800,80317,10
1575176400,81824,11
1577854800,83482,12
1580533200,84923,13
1583038800,86383,14
1585713600,87966,15
1588305600,89625,16
1590984000,91390,17
1593576000,92861,18
1596254400,94335,19
1598932800,95873,20
1601524800,97411,21
1604203200,99378,22
1606798800,101792,23
