1569902400,883349,
1572580800,887158,
1575176400,891218,
1577854800,895268,
1580533200,899548,
1583038800,903476,
1585713600,908204,1
1588305600,912905,2
1590984000,917838,3
1593576000,922444,4
1596254400,927150,5
1598932800,931805,6
1601524800,936596,7
1604203200,941030,8
1606798800,945392,9
1609477200,949931,10
1612155600,954906,11
1614574800,959665,12
1617249600,966918,13
1619841600,973152,14
1622520000,978883,15
1625112000,989940,16
