1533096000,36951,
1535774400,621605,
1538366400,61438,
1541044800,40276,
1543640400,20346,
1546318800,14869,
1548997200,14165,0
1551416400,13223,0
1554091200,13793,0
1556683200,12052,0
1559361600,11408,0
1561953600,10900,0
1564632000,10423,0
1567310400,9969,0
1569902400,8309,0
1572580800,7826,0
1575176400,7457,0
1577854800,7486,0
1580533200,7634,0
1583038800,7031,0
1585713600,6980,0
1588305600,6775,0
1590984000,6756,0
1593576000,6869,0
1596254400,6967,0
1598932800,7038,0
1601524800,7063,0
1604203200,7088,0
1606798800,7188,1
