1533096000,36460,
1535774400,619007,
1538366400,61050,
1541044800,40012,
1543640400,20182,
1546318800,14736,
1548997200,14027,
1551416400,13091,
1554091200,13631,
1556683200,11908,
1559361600,11261,
1561953600,10766,
1564632000,10303,
1567310400,9846,
1569902400,8185,
1572580800,7716,
1575176400,7333,
1577854800,7370,
1580533200,7514,
1583038800,6906,
1585713600,6846,
1588305600,6652,
1590984000,6625,
1593576000,6728,
1596254400,6818,
1598932800,6879,
1601524800,6903,
1604203200,6927,
1606798800,7038,
1609477200,7116,
1612155600,7226,
1614574800,7285,1
1617249600,7444,2
1619841600,7465,3
1622520000,7519,4
1625112000,7787,
